# ai-financial-multiagent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/agents/: analyst.py  critic.py  reporter.py  retriever.py
app/api/: routes.py
app/core/: config.py  graph.py  models.py
app/db/: vector_store.py
docs/: ARCHITECTURE.md
tests/: test_graph.py  test_health.py
